<resources>
    <string name="app_name">ShopPal</string>

    <string name="add_product">Add Product</string>
    <string name="settings">Settings</string>
    <string name="title_activity_edit_product">Product</string>
    <string name="cancel_button">Cancel</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="notes">Notes</string>
    <string name="zero" translatable="false">0</string>
    <string name="new_product">New Product</string>
    <string name="useful_information">Useful Information</string>
    <string name="title_activity_about">About</string>
    <string name="action_about">About</string>
    <string name="contactInfo">Contact Information</string>
    <string name="appDescription">ShopPal is a simple and smart application that predicts your shopping for you! :D</string>
    <string name="feedback">To suggest a feature, report an issue, or send any other feedback about ShopPal, please contact us at shoppalgr@gmail.com. We will carefully read your email and use it to improve your experience!</string>
    <string name="totalField">TOTAL: </string>
    <string name="buy">Buy</string>
    <string name="statistics">Statistics</string>
    <string name="chartDescription">The PieChart above shows how frequently each product is bought in comparison to the others.</string>
    <string name="minus_button" translatable="false">−</string>
    <string name="plus_button" translatable="false">+</string>
    <string name="one" translatable="false">1</string>
    <string name="please_enter_name">Please enter a name</string>
    <string name="statistics_title">Buy Frequencies Comparison</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>

    <!-- Delete Dialog -->
    <string name="delete_title">Delete product</string>
    <string name="delete_text">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <!-- SettingsActivity -->
    <string name="title_activity_settings">Settings</string>

    <!-- Notification Settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_summary_notifications">Choose to be notified when a product is about to be depleted</string>
    <string name="pref_title_sounds">Sounds</string>
    <string name="pref_frequency">Frequency</string>

    <!-- Data Settings -->
    <string name="pref_header_data">Data</string>
    <string name="pref_title_reset_slt">Reset Since Last Time</string>
    <string name="pref_summary_reset_slt">Choose this option if you forgot to use ShopPal last time you went shopping</string>
    <string name="pref_title_factory_reset">Factory Reset</string>
    <string name="about_header_4">Libraries</string>
    <string name="libraries"><![CDATA[ShopPal uses the open-source libraries Joda-Time and MPAndroidChart, that both fall under the Apache v2.0 license.]]></string>
    <string name="licenses"><u>Licenses</u></string>
    <string name="note"><![CDATA[*This is an experimental app that was implemented for the project of the course \"Software Engineering\", in the Department of Electrical & Computer Engineering, at Aristotle University of Thessaloniki, in 2015.]]></string>
    <string name="factory_reset">Factory Reset</string>
    <string name="factory_reset__text">This will delete EVERYTHING! Are you sure?</string>
    <string name="slt_reset">Reset Since Last Time</string>
    <string name="slt_reset__text">Restore the predictions to the last time you shopped?</string>

    <!-- Notifications -->
    <string name="notification_title">Product Depletion</string>
    <string name="notification_text">One or more products are probably depleted!</string>
    <string name="notification_ticker">You probably should go shopping…</string>

    <!-- AboutActivity -->
    <string name="logo" translatable="false">logo</string>
    <string name="about_header_1">What is ShopPal?</string>
    <string name="about_header_2">How does it work?</string>
    <string name="about_header_3">Any feedback?</string>
    <string name="appHowTo">Every time you go shopping, simply checkout with the products you bought. ShopPal will predict with increasing accuracy the depletion rates and bind each item with an appropriate color. Is it green? No worries, plenty left! Is it red? Oops! You better hurry and resupply!</string>
    <string name="team" translatable="false">ShopPal Team 2015</string>
    <string name="team_members">Maria Panagiotis Sofia Vaya</string>
    <string name="versionName" translatable="false">v%1$s</string>

    <!-- Misc -->

</resources>
